add bootstrap effects in page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jake's Dream Vacation</title>
   </head>
   <body
-    <div class="cointainer">
+    <div class="container">
       <div class="jumbotron">
       <h1>A Vacation That Sucked</h1>
       <p>This lkasdh aslkdf sdjfd ks fksdf ;afljksd f;s;s dfhsdsdgiufidslfkjhdsgsdhlkasd g</p>
@@ -17,10 +17,13 @@
       <div class="">
         <h2>more info about trip</h2>
         <p>sadfkjsadhflks</p>
-      </div>\
+      </div>
+      <div class="well">
       <blockquote>
-
+        <p class="bg-success">"My room was a bombed out car!"</p>
+        <h3>-A happy customer</h3>
       </blockquote>
+        </div>
     </div>
   </body>
 </html>
