add bootstrap grid system. add vacation packages and different prices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Jake's Dream Vacation</title>
   </head>
   <body
@@ -24,6 +25,27 @@
         <h3>-A happy customer</h3>
       </blockquote>
         </div>
+
+
+      <h1>Here are our Vacation Packages!</h1>
+      <div  class ="col-md-4">
+      <h3> Bronze Package</h3>
+      <p>lasdjfljasdlfkjalsdkfjlaksjdflkajsdflkajsldfkjadlskf</p>
+      <p>Price: $3.99</p>
+      </div>
+
+      <div class ="col-md-4">
+
+      <h3>Silver Package</h3>
+      <p>lasjdfljasdlfkjasldkjflaskdjflkajsdflkjasdf</p>
+      <p>Price: $100.99</p>
+      </div>
+      <div  class ="col-md-4">
+
+      <h3> Gold Package</h3>
+      <p>lasdjfljasdlfkjalsdkfjlaksjdflkajsdflkajsldfkjadlskf</p>
+      <p>Price: $1000.99</p>
+      </div>
     </div>
   </body>
 </html>
